--- a/validation/validation_data.ipynb
+++ b/validation/validation_data.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -211,21 +211,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_out = df.copy()\n",
     "# highlight the target in the sentence\n",
-    "df['SENT'] = df.apply(lambda row : row[\"SENT\"].replace(f\" {row.TARGET}\",  f\" <{row.TARGET}> \", 1), axis = 1)\n",
+    "df_out['SENT'] = df_out.apply(lambda row : row[\"SENT\"].replace(f\" {row.TARGET}\",  f\" <{row.TARGET}> \", 1), axis = 1)\n",
     "# apply empty column for rating\n",
-    "df[\"RATING\"] = \"\"\n",
+    "df_out[\"RATING\"] = \"\"\n",
     "# save\n",
-    "df.to_csv(\"example.csv\")"
+    "df_out.to_csv(\"example.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +257,6 @@
        "      <th>DDB2</th>\n",
        "      <th>DDB3</th>\n",
        "      <th>DDB4+</th>\n",
-       "      <th>RATING</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -269,7 +269,6 @@
        "      <td>13|007|Fysik</td>\n",
        "      <td>15|055|Kendt, indflydelsesrig</td>\n",
        "      <td>[17|018|Kampsport, 17|012|Atletik, 22|017|Astr...</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -280,7 +279,6 @@
        "      <td>14|005|Tegning, maleri</td>\n",
        "      <td>03|015|Understøtte</td>\n",
        "      <td>[04|015|Lavvandet, 12|035|Argumentere, bevise,...</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -291,7 +289,6 @@
        "      <td>11|012|Logisk tænkning</td>\n",
        "      <td>04|031|Forene, samle</td>\n",
        "      <td>[04|039|Helhed]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -302,7 +299,6 @@
        "      <td>21|009|Forbrydelse</td>\n",
        "      <td>21|023|Domstol, ret</td>\n",
        "      <td>[05|011|Omstændighed, forhold, 18|014|Offentli...</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -313,11 +309,9 @@
        "      <td>21|017|Lov</td>\n",
        "      <td>21|020|Rettighed</td>\n",
        "      <td>[22|010|Bøn, fromhed]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -335,7 +329,6 @@
        "      <td>17|002|Sportsorganisation</td>\n",
        "      <td>18|012|Institution</td>\n",
        "      <td>[20|031|Butik, 20|041|Virksomhed, ledelse]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>116</th>\n",
@@ -346,7 +339,6 @@
        "      <td>02|040|Behandling, helbredelse</td>\n",
        "      <td>19|024|Råstoffer, materialer</td>\n",
        "      <td>[19|018|Computer, 12|024|Samtale]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
@@ -357,7 +349,6 @@
        "      <td>03|022|Grænse, rand</td>\n",
        "      <td>18|002|Stat, nation</td>\n",
        "      <td>[11|010|Skelne, 05|024|Modsætning, 19|011|Teknik]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>118</th>\n",
@@ -368,7 +359,6 @@
        "      <td>15|019|Anerkendelse</td>\n",
        "      <td>16|011|Tobak</td>\n",
        "      <td>[22|010|Bøn, fromhed]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
@@ -379,11 +369,10 @@
        "      <td>13|010|Grundstoffer</td>\n",
        "      <td>20|024|Penge</td>\n",
        "      <td>[07|015|Farve, 20|010|Rigdom]</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>120 rows × 8 columns</p>\n",
+       "<p>120 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -439,23 +428,23 @@
        "118                   16|011|Tobak   \n",
        "119                   20|024|Penge   \n",
        "\n",
-       "                                                 DDB4+ RATING  \n",
-       "0    [17|018|Kampsport, 17|012|Atletik, 22|017|Astr...         \n",
-       "1    [04|015|Lavvandet, 12|035|Argumentere, bevise,...         \n",
-       "2                                      [04|039|Helhed]         \n",
-       "3    [05|011|Omstændighed, forhold, 18|014|Offentli...         \n",
-       "4                                [22|010|Bøn, fromhed]         \n",
-       "..                                                 ...    ...  \n",
-       "115         [20|031|Butik, 20|041|Virksomhed, ledelse]         \n",
-       "116                  [19|018|Computer, 12|024|Samtale]         \n",
-       "117  [11|010|Skelne, 05|024|Modsætning, 19|011|Teknik]         \n",
-       "118                              [22|010|Bøn, fromhed]         \n",
-       "119                      [07|015|Farve, 20|010|Rigdom]         \n",
+       "                                                 DDB4+  \n",
+       "0    [17|018|Kampsport, 17|012|Atletik, 22|017|Astr...  \n",
+       "1    [04|015|Lavvandet, 12|035|Argumentere, bevise,...  \n",
+       "2                                      [04|039|Helhed]  \n",
+       "3    [05|011|Omstændighed, forhold, 18|014|Offentli...  \n",
+       "4                                [22|010|Bøn, fromhed]  \n",
+       "..                                                 ...  \n",
+       "115         [20|031|Butik, 20|041|Virksomhed, ledelse]  \n",
+       "116                  [19|018|Computer, 12|024|Samtale]  \n",
+       "117  [11|010|Skelne, 05|024|Modsætning, 19|011|Teknik]  \n",
+       "118                              [22|010|Bøn, fromhed]  \n",
+       "119                      [07|015|Farve, 20|010|Rigdom]  \n",
        "\n",
-       "[120 rows x 8 columns]"
+       "[120 rows x 7 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,6 +452,13 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
