fix validation info

--- a/validation/validation_data_creation.ipynb
+++ b/validation/validation_data_creation.ipynb
@@ -12,54 +12,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebooks contains the pipeline to create a dataset for human validation of the DDB-Tagger. The aim is to sample sentences from a broad range of texts of the Danish Gigaword Corpus (DAGW), in which a target word is then tagged using the DDB Tagger. The sampled sentences, together with their target word and tags are stored in a dataframe. This dataframe can be used to allow human annotators to validate the tags of the DDB Tagger. This is done with the following pipeline: \n",
-    "\n",
-    "\n",
-    "**0 Import Dependencies**<br>\n",
+    "This notebook contains the pipeline to create a dataset for human validation of the DDB-Tagger. The aim is to sample sentences from a broad range of texts of the Danish Gigaword Corpus (DAGW), in which a target word is then tagged using the DDB Tagger. The sampled sentences, together with their target word and tags are stored in a dataframe. This dataframe can be used to allow human annotators to validate the tags of the DDB Tagger. This is done with the following pipeline:\n",
+    " \n",
+    "<br>\n",
+    " \n",
+    "**0 Import Dependencies**\n",
     "- Load Danish Language Model (SpaCy: `da_core_news_lg`) for splitting of sentences, tokens and POS-Tagging\n",
     "- Load DDB-Tagger\n",
-    "\n",
+    " \n",
+    "<br>\n",
+    " \n",
     "**1 Defining Inputs for Sampling of Sentences and Target Words**<br>\n",
-    "- <u>Categories</u>: Defining categories and sektions of the DAGW corpus (related to dataset retrieved 20/02/2022)\n",
-    "    - The following datasets were excluded:\n",
-    "        - CONVERSATION: NAAT\n",
-    "        - SOCIAL MEDIA: General Discussions, Parliament Elections\n",
-    "        - WEB\n",
-    "        - WIKI&BOOKS: Danish Literature, Gutenberg, WikiSource, Johannes V. Jensen, Religious Texts\n",
-    "        - NEWS: DanAvis\n",
-    "        - OTHER\n",
-    "- <u>Subset Size</u>: The subset size defines the number of characters which are read from a given sampled file. Defaults to 1000 characters.\n",
-    "- <u>Context Size</u>: The context size defines the number of tokens to appear before a given target and after a given target in the same sentence. Defaults to 10 tokens. \n",
-    "- <u>Target POS</u>: The target POS tag defines the POS tag that the target word in a given sentence should have. Defaults to `NOUN`. \n",
-    "\n",
+    "- <u>Categories</u>: Defining categories and sections of the DAGW corpus (related to dataset retrieved 20/02/2022)\n",
+    "   - The following datasets were excluded:\n",
+    "       - CONVERSATION: NAAT\n",
+    "       - SOCIAL MEDIA: General Discussions, Parliament Elections\n",
+    "       - WEB\n",
+    "       - WIKI&BOOKS: Danish Literature, Gutenberg, WikiSource, Johannes V. Jensen, Religious Texts\n",
+    "       - NEWS: DanAvis\n",
+    "       - OTHER\n",
+    "- <u>Subset Size</u>: Defines the number of characters which are read from a given sampled file. Defaults to 1000 characters.\n",
+    "- <u>Context Size</u>: Defines the number of tokens to appear before a given target and after a given target in the same sentence. Defaults to 10 tokens.\n",
+    "- <u>Target POS</u>: The target POS tag defines the POS tag that the target word in a given sentence should have. Defaults to `NOUN`.\n",
+    " \n",
+    "<br>\n",
+    " \n",
     "**2 Sampling Sentences and Target Words for Defined Categories**\n",
-    "- The following steps are performed to retrieve target tokens and sentences and create the validation data (here desribed using the default inputs): \n",
-    "\n",
-    "    - For each of the defined categories:\n",
-    "        - Create a list of files across all sektions beloning to the given category \n",
-    "        - Until 20 targets/sentences have been found for the given category:\n",
-    "            - Sample a random file of the list of files and remove it from the list of files (to avoid double sampling)\n",
-    "            - Read the first 1000 characters of the file\n",
-    "            - Split the text into sentence, excluding those that contain linebreaks\n",
-    "            - For each sentence:\n",
-    "                - Split the sentence into tokens, excluding space and punctuation\n",
-    "                - If the number of tokens is large enough to contain a target word and 10 context tokens before and after the target (11):\n",
-    "                    - Iterature over tokens and ensure that: \n",
-    "                        - Token is longer than 1 characeter\n",
-    "                        - Token occurs only once in the given sentence (to avoid confusion when tagging)\n",
-    "                        - Has the required POS tag (`NOUN`)\n",
-    "                        - Has 10 tokens before and 10 tokens after in the sentence\n",
-    "                        - Token does not occur in the validation data yet\n",
-    "                        - Sentence of the token does not occur in the validation data yet\n",
-    "                    - If the above requirements are fulfilled:\n",
-    "                        - Tag the sentence of the token using the DDB-Tagger\n",
-    "                        - Retrieve the tag of the target token in the sentence\n",
-    "                        - If the target token has 4+ tags:\n",
-    "                            - Highlight the token in its sentence\n",
-    "                            - Add information (token, sentence, tags) to the validation data\n",
-    "\n",
-    "\n",
-    "**3 Processing Outout**\n",
+    "<br><br>\n",
+    "The following steps are performed to retrieve target tokens and sentences and create the validation data (here described using the default inputs):\n",
+    " \n",
+    "- For each of the defined categories:\n",
+    "   - Create a list of files across all sections belonging to the given category\n",
+    "   - Until 20 targets/sentences have been found for the given category:\n",
+    "       - Sample a random file of the list of files and remove it from the list of files (to avoid double sampling)\n",
+    "       - Read the first 1000 characters of the file\n",
+    "       - Split the text into sentences, excluding those that contain line breaks\n",
+    "       - For each sentence:\n",
+    "           - Split the sentence into tokens, excluding space and punctuation\n",
+    "           - If the number of tokens is large enough to contain a target word and 10 context tokens before and after the target (11):\n",
+    "               - For each token, check if:\n",
+    "                   - Token is longer than 1 character\n",
+    "                   - Token occurs only once in the given sentence (to avoid confusion when tagging)\n",
+    "                   - Has the required POS tag (`NOUN`)\n",
+    "                   - Has 10 tokens before and 10 tokens after in the sentence\n",
+    "                   - Token does not occur in the validation data yet\n",
+    "                   - Sentence of the token does not occur in the validation data yet\n",
+    "               - If the above requirements are fulfilled:\n",
+    "                   - Tag the sentence of the token using the DDB-Tagger\n",
+    "                   - Retrieve the tag of the target token in the sentence\n",
+    "                   - If the target token has 4+ tags:\n",
+    "                       - Highlight the token in its sentence\n",
+    "                       - Add information (token, sentence, tags) to the validation data\n",
+    " \n",
+    "<br>\n",
+    " \n",
+    "**3 Processing Output**\n",
     "- Processing output to create a dataset with all information (`validation_data_full.csv`) and a dataset for rating, with less information and a column for the ratings (`validation_data_rating.csv`)."
    ]
   },
