--- a/validation/validation_data_creation.ipynb
+++ b/validation/validation_data_creation.ipynb
@@ -32,7 +32,8 @@
     "- <u>Target POS</u>: The target POS tag defines the POS tag that the target word in a given sentence should have. Defaults to `NOUN`.\n",
     " \n",
     "#### 2 Sampling Sentences and Target Words for Defined Categories\n",
-    "The following steps are performed to retrieve target tokens and sentences and create the validation data (here described using the default inputs):<br>\n",
+    "The following steps are performed to retrieve target tokens and sentences and create the validation data (here described using the default inputs):<br><br>\n",
+    "\n",
     "For each of the defined categories:\n",
     " \n",
     "- Create a list of files across all sections belonging to the given category\n",
