--- a/validation/validation_data_creation.ipynb
+++ b/validation/validation_data_creation.ipynb
@@ -77,6 +77,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `install_requirements.sh` script can be used to create a virtual environment with all the necessary dependencies. However, it will only install the Danish language model `da_core_news_sm`. If you wish to use `da_core_news_lg`, as used in the following, you can install it within the virtual environment by running the following code in the terminal:\n",
+    "\n",
+    "`python3 -m spacy download da_core_news_lg`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
