add info to demo

--- a/DDB_demo.ipynb
+++ b/DDB_demo.ipynb
@@ -30,13 +30,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method __init__ in module src.DDB_tagger:\n",
+      "\n",
+      "__init__(dict: str = 'dict/dict.pkl', da_model: str = 'spacy') method of src.DDB_tagger.DDB_tagger instance\n",
+      "    Initializing Semantic Tagger using Den Danske Begrebsordbog.\n",
+      "    \n",
+      "    Args:\n",
+      "        dict (str, optional): Path to semantic dictionary. Defaults to \"dict/dict.pkl\".\n",
+      "        da_model (str, optional): Danish Language Model to use, \"spacy\" or \"dacy\". Defaults to \"spacy\".\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Load Tagger\n",
     "from src.DDB_tagger import DDB_tagger\n",
-    "Tagger = DDB_tagger(da_model=\"spacy\")"
+    "Tagger = DDB_tagger(da_model=\"spacy\")\n",
+    "\n",
+    "# Print info about how to load tagger\n",
+    "help(Tagger.__init__)"
    ]
   },
   {
@@ -44,6 +63,41 @@
    "metadata": {},
    "source": [
     "#### 1 Tagging A String of Text Input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A string of text can be tagged by using the `tag_text` function. When calling the function, the following parameters can be defined:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method tag_text in module src.DDB_tagger:\n",
+      "\n",
+      "tag_text(input: str, input_file: bool = False, only_top3_results: bool = True, only_tagged_results: bool = False) method of src.DDB_tagger.DDB_tagger instance\n",
+      "    Processing and tagging a text using Den Danske Begrebsordbog.\n",
+      "    \n",
+      "    Args:\n",
+      "        input (str): String of input text or path to input file. \n",
+      "        input_file (bool, optional): Defines whether input is path (True) to input file or string of text (False). Defaults to False.\n",
+      "        only_top3_results (bool, optional): Defines whether only the top3 tags or all should be in the results. Defaults to True.\n",
+      "        only_tagged_results (bool, optional): Defines whether results should only contain tags (True), or also scores (False). Defaults to False.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print info on how to tag a text\n",
+    "help(Tagger.tag_text)"
    ]
   },
   {
@@ -339,6 +393,34 @@
    "metadata": {},
    "source": [
     "#### 2 Tagging All Files in A Directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method tag_directory in module src.DDB_tagger:\n",
+      "\n",
+      "tag_directory(input_directory: str = 'in/', output_directory: str = 'out/', only_top3_results: bool = True, only_tagged_results: bool = False) method of src.DDB_tagger.DDB_tagger instance\n",
+      "    Tagging all texts (.txt files) in a directory using the tag_text function.\n",
+      "    \n",
+      "    Args:\n",
+      "        input_directory (str, optional): Input directory containing .txt files. Defaults to \"in/\".\n",
+      "        output_directory (str, optional): Output directory to save results. Defaults to \"out/\".\n",
+      "        only_top3_results (bool, optional): Defines whether only the top3 tags or all should be in the results. Defaults to True.\n",
+      "        only_tagged_results (bool, optional): Defines whether results should only contain tags (True), or also scores (False). Defaults to False.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print info on how to tag a directory\n",
+    "help(Tagger.tag_directory)"
    ]
   },
   {
