--- a/DDB_demo.ipynb
+++ b/DDB_demo.ipynb
@@ -25,37 +25,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 0 Loading Tagger "
+    "#### 0 Loading Tagger \n",
+    "When loading the tagger, the following parameters can be defined:\n",
+    "- `dict` (str, optional): Path to semantic dictionary. Defaults to \"dict/dict.pkl\".\n",
+    "- `da_model` (str, optional): Danish Language Model to use, \"spacy\" or \"dacy\". Defaults to \"spacy\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method __init__ in module src.DDB_tagger:\n",
-      "\n",
-      "__init__(dict: str = 'dict/dict.pkl', da_model: str = 'spacy') method of src.DDB_tagger.DDB_tagger instance\n",
-      "    Initializing Semantic Tagger using Den Danske Begrebsordbog.\n",
-      "    \n",
-      "    Args:\n",
-      "        dict (str, optional): Path to semantic dictionary. Defaults to \"dict/dict.pkl\".\n",
-      "        da_model (str, optional): Danish Language Model to use, \"spacy\" or \"dacy\". Defaults to \"spacy\".\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load Tagger\n",
     "from src.DDB_tagger import DDB_tagger\n",
-    "Tagger = DDB_tagger(da_model=\"spacy\")\n",
-    "\n",
-    "# Print info about how to load tagger\n",
-    "help(Tagger.__init__)"
+    "Tagger = DDB_tagger(da_model=\"spacy\")"
    ]
   },
   {
@@ -69,61 +53,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A string of text can be tagged by using the `tag_text` function. When calling the function, the following parameters can be defined:\n"
+    "A string of text can be tagged by using the `tag_text` function. When calling the function, the following parameters can be defined:\n",
+    "- `input` (str): String of input text or path to input file. \n",
+    "- `input_file` (bool, optional): Defines whether input is path (True) to input file or string of text (False). Defaults to False.\n",
+    "- `only_top3_results` (bool, optional): Defines whether only the top3 tags or all should be in the results. Defaults to True.\n",
+    "- `only_tagged_results` (bool, optional): Defines whether results should only contain tags (True), or also scores (False). Defaults to False."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method tag_text in module src.DDB_tagger:\n",
-      "\n",
-      "tag_text(input: str, input_file: bool = False, only_top3_results: bool = True, only_tagged_results: bool = False) method of src.DDB_tagger.DDB_tagger instance\n",
-      "    Processing and tagging a text using Den Danske Begrebsordbog.\n",
-      "    \n",
-      "    Args:\n",
-      "        input (str): String of input text or path to input file. \n",
-      "        input_file (bool, optional): Defines whether input is path (True) to input file or string of text (False). Defaults to False.\n",
-      "        only_top3_results (bool, optional): Defines whether only the top3 tags or all should be in the results. Defaults to True.\n",
-      "        only_tagged_results (bool, optional): Defines whether results should only contain tags (True), or also scores (False). Defaults to False.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Print info on how to tag a text\n",
-    "help(Tagger.tag_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Da demonstrationerne mod politivold og racisme eksploderede overalt i USA først på sommeren, greb Donald Trump straks chancen for at gøre præsidentvalget til et spørgsmål om lov og orden. Siden har han tordnet mod demokratiske borgmestre i uroplagede byer som Chicago, Portland og Seattle – hvis han da ikke bare har tweetet ordene ’LOV OG ORDEN’ med versaler.\n",
-      "\n",
-      "Desværre for Trump har strategien ikke virket. Hans demokratiske modkandidat Joe Biden fører stadig solidt i meningsmålingerne. Trumps republikanske kernevælgere har godt nok taget imod lov og orden-budskabet – i en grad, så hardcore Trump-tilhængere går til modangreb mod demonstranter i gaderne. Men flest amerikanere svarer rent faktisk i undersøgelser, at de mener, Joe Biden er bedre til at skabe lov og orden end Trump. I en måling i det politiske medie The Hill viser 54 procent af vælgerne for eksempel mest tillid til Biden i spørgsmålet.\n",
-      "\n",
-      "Joe Biden fører i øjeblikket over Donald Trump med cirka 7 procentpoint i et vægtet gennemsnit af de nationale meningsmålinger, udregnet af det statistiske medie Fivethirtyeight.\n",
-      "Vis mere\n",
-      "\n",
-      "På den baggrund er det måske ikke så underligt, at Trump-kampagnen nu, med små 50 dage til præsidentvalget, er i gang med at skifte hovedfokus.\n",
-      "\n",
-      "»Det er et fokus på økonomien som det definerende emne i valgkampen«, siger en medarbejder fra Trumps valgkampagne til Fox News og Reuters.\n",
-      "\n",
-      "Trump-lejren har derfor investeret små 65 millioner kroner ekstra i nye amerikanske tv-reklamer, som fra i dag tirsdag skal hamre budskabet fast. I weekenden besøgte Trump også Nevada – en stat, der ikke har været et brændpunkt for raceuroligheder eller demonstrationer, men som til gengæld er hårdest ramt i hele USA af arbejdsløshed på grund af coronakrisen. Her slog Trump på at genrejse økonomien.\n",
-      "\n",
-      "»Jeg går efter at blive genvalgt for at for at genoprette den fantastiske velstand, vi har oplevet«, sagde Trump blandt andet ved sit vælgermøde i Las Vegas.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Da demonstrationerne mod politivold og racisme eksploderede overalt i USA først på sommeren, greb Donald Trump straks chancen for at gøre præsidentvalget til et spørgsmål om lov og orden. Siden har han tordnet mod demokratiske borgmestre i uroplagede byer som Chicago, Portland og Seattle – hvis han da ikke bare har tweetet ordene ’LOV OG ORDEN’ med versaler.\\n\\nDesværre for Trump har strategien ikke virket. Hans demokratiske modkandidat Joe Biden fører stadig solidt i meningsmålingerne. Trumps republikanske kernevælgere har godt nok taget imod lov og orden-budskabet – i en grad, så hardcore Trump-tilhængere går til modangreb mod demonstranter i gaderne. Men flest amerikanere svarer rent faktisk i undersøgelser, at de mener, Joe Biden er bedre til at skabe lov og orden end Trump. I en måling i det politiske medie The Hill viser 54 procent af vælgerne for eksempel mest tillid til Biden i spørgsmålet.\\n\\nJoe Biden fører i øjeblikket over Donald Trump med cirka 7 procentpoint i et vægtet gennemsnit af de nationale meningsmålinger, udregnet af det statistiske medie Fivethirtyeight.\\nVis mere\\n\\nPå den baggrund er det måske ikke så underligt, at Trump-kampagnen nu, med små 50 dage til præsidentvalget, er i gang med at skifte hovedfokus.\\n\\n»Det er et fokus på økonomien som det definerende emne i valgkampen«, siger en medarbejder fra Trumps valgkampagne til Fox News og Reuters.\\n\\nTrump-lejren har derfor investeret små 65 millioner kroner ekstra i nye amerikanske tv-reklamer, som fra i dag tirsdag skal hamre budskabet fast. I weekenden besøgte Trump også Nevada – en stat, der ikke har været et brændpunkt for raceuroligheder eller demonstrationer, men som til gengæld er hårdest ramt i hele USA af arbejdsløshed på grund af coronakrisen. Her slog Trump på at genrejse økonomien.\\n\\n»Jeg går efter at blive genvalgt for at for at genoprette den fantastiske velstand, vi har oplevet«, sagde Trump blandt andet ved sit vælgermøde i Las Vegas.'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -136,7 +86,7 @@
     "    f.close()\n",
     "\n",
     "# Print text \n",
-    "print(text)"
+    "text"
    ]
   },
   {
@@ -396,31 +346,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method tag_directory in module src.DDB_tagger:\n",
-      "\n",
-      "tag_directory(input_directory: str = 'in/', output_directory: str = 'out/', only_top3_results: bool = True, only_tagged_results: bool = False) method of src.DDB_tagger.DDB_tagger instance\n",
-      "    Tagging all texts (.txt files) in a directory using the tag_text function.\n",
-      "    \n",
-      "    Args:\n",
-      "        input_directory (str, optional): Input directory containing .txt files. Defaults to \"in/\".\n",
-      "        output_directory (str, optional): Output directory to save results. Defaults to \"out/\".\n",
-      "        only_top3_results (bool, optional): Defines whether only the top3 tags or all should be in the results. Defaults to True.\n",
-      "        only_tagged_results (bool, optional): Defines whether results should only contain tags (True), or also scores (False). Defaults to False.\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "# Print info on how to tag a directory\n",
-    "help(Tagger.tag_directory)"
+    "Files in a directory can be tagged by using the `tag_directory` function. When calling the function, the following parameters can be defined:\n",
+    "- `input_directory` (str, optional): Input directory containing .txt files. Defaults to \"in/\".\n",
+    "- `output_directory` (str, optional): Output directory to save results. Defaults to \"out/\".\n",
+    "- `only_top3_results` (bool, optional): Defines whether only the top3 tags or all should be in the results. Defaults to True.\n",
+    "- `only_tagged_results` (bool, optional): Defines whether results should only contain tags (True), or also scores (False). Defaults to False."
    ]
   },
   {
