--- a/DDB_demo.ipynb
+++ b/DDB_demo.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 0 Loading Tagger \n",
+    "### 0 Loading Tagger \n",
     "When loading the tagger, the following parameters can be defined:\n",
     "- `dict` (str, optional): Path to semantic dictionary. Defaults to \"dict/dict.pkl\".\n",
     "- `da_model` (str, optional): Danish Language Model to use, \"spacy\" or \"dacy\". Defaults to \"spacy\"."
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1 Tagging A String of Text Input"
+    "### 1 Tagging A String of Text Input"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2 Tagging All Files in A Directory"
+    "### 2 Tagging All Files in A Directory"
    ]
   },
   {
